Add another commit to test

--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -31,7 +31,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - name: Extract commit messages
+      - name: Extract commit messages, from list to string
         id: extract-commits
         run: |
           echo "commit_messages=$(jq -n --argjson commits '${{ toJson(github.event.commits) }}' '$commits | map(.message)')" >> $GITHUB_ENV
