--- a/.github/actions/publish-to-pypi/action.yml
+++ b/.github/actions/publish-to-pypi/action.yml
@@ -12,4 +12,6 @@ runs:
         path: dist/
 
     - name: Publish distribution to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1.12
+      uses: pypa/gh-action-pypi-publish@release/v1.10
+      with:
+        verify-metadata: false
