--- a/.github/actions/python-testing-and-coverage/action.yml
+++ b/.github/actions/python-testing-and-coverage/action.yml
@@ -42,7 +42,6 @@ runs:
     - name: Upload coverage report
       uses: actions/upload-artifact@v4
       with:
-        name: coverage_file
+        name: coverage_file-${{ inputs.python_version }}
         path: ./coverage.xml
         if-no-files-found: error
-        overwrite: true
