--- a/.github/actions/upload-codecov-coverage/action.yml
+++ b/.github/actions/upload-codecov-coverage/action.yml
@@ -12,14 +12,22 @@ runs:
     - name: Download code coverage
       uses: actions/download-artifact@v4
       with:
-        name: coverage_file
+        name: coverage_file-*
         path: ./coverage # The file is unzipped in a subdirectory
+
+    - name: Combine coverage reports
+      shell: bash
+      run: |
+        pip install coverage
+        coverage combine ./coverage/*/coverage.xml
+        coverage xml -o ./combined_coverage.xml
+
 
     - name: Upload code coverage
       uses: codecov/codecov-action@v4
       with:
         token: ${{ inputs.codecov_token }}  # Use the input for Codecov token
-        file: ./coverage/coverage.xml
+        file: ./combined_coverage.xml
         name: rich
         flags: unittests
         env_vars: OS,PYTHON
