--- a/.github/actions/python-testing-and-coverage/action.yml
+++ b/.github/actions/python-testing-and-coverage/action.yml
@@ -45,3 +45,4 @@ runs:
         name: coverage_file-${{ inputs.python_version }}
         path: ./coverage.xml
         if-no-files-found: error
+        overwrite: true
