Delete comments from testing workflow

--- a/.github/actions/python-testing-and-coverage/action.yml
+++ b/.github/actions/python-testing-and-coverage/action.yml
@@ -9,7 +9,7 @@ inputs:
   coverage_path:
     description: The path to the code for coverage reporting.
     required: true
-    default: "./src"  # Default path for coverage
+    default: "./src"
 
 runs:
   using: "composite"
